--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@tanstack/react-query": "^4.32.0",
     "axios": "^1.4.0",
     "imgbb-uploader": "^1.5.1",
     "react": "^18.2.0",
